src/objects/Context_Object__mdt.object
<CustomObject>
    <description>This object captures the request and response structure for the service.</description>
    <fields>
        <fullName>Depth_Level__c</fullName>
        <inlineHelpText>This value defines the current structure depth from root object in the structure. Root is considered as level 1.</inlineHelpText>
        <label>Depth Level</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Property_Name__c</fullName>
        <description>This field captures the property name in JSON structure.</description>
        <label>External Property Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Service__c</fullName>
        <label>Integration Service</label>
        <referenceTo>Integration_Service__mdt</referenceTo>
        <relationshipLabel>Context Objects</relationshipLabel>
        <relationshipName>Context_Objects</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Mandatory_Structure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field reflects if this structure is mandatory in JSON context.</description>
        <label>Mandatory Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Context_Object_Id__c</fullName>
        <inlineHelpText>Please provide parent context object name for nested structure.</inlineHelpText>
        <label>Parent Context Object Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Relationship_Name__c</fullName>
        <label>Parent Relationship Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_SObject_Field_Name__c</fullName>
        <label>Parent SObject Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <label>SObject Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure_Type__c</fullName>
        <label>Structure Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                    <label>Request</label>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Context Object</label>
    <pluralLabel>Context Objects</pluralLabel>
</CustomObject>